Added GLFW 3.4 to project. Created class to resolve library path.